Proyecto2/grpc/kubernetes/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  replicas: 2  # Ajustado a 2 réplicas iniciales
  selector:
    matchLabels:
      io.kompose.service: consumer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: consumer
    spec:
      containers:
        - image: gcr.io/so1202001954/grpc_consumer:latest  # Utilizando imagen de GCR
          name: consumer
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
