Proyecto2/grpc/kubernetes/grpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: grpc-server
  name: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grpc-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.service: grpc-server
    spec:
      containers:
        - name: grpc-server
          image: gcr.io/so1202001954/grpc_grpc-server:tag  # Updated image path
          ports:
            - containerPort: 3001
          resources: {}
      restartPolicy: Always
status: {}
