Proyecto2/grpc/kubernetes/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: grpc-client
  name: grpc-client
spec:
  type: ClusterIP  # Cambiado de LoadBalancer a ClusterIP
  ports:
    - name: "http"
      port: 8080        # Puerto externo que quieres usar
      targetPort: 3000  # Puerto interno al que apunta el servicio
  selector:
    io.kompose.service: grpc-client
