Proyecto2/grpc/kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  name: mongodb
  labels:
    io.kompose.service: mongodb
spec:
  type: LoadBalancer  # Añadir o cambiar esta línea para especificar el tipo LoadBalancer
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongodb
