Proyecto2/grpc/kubernetes/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Si no estás usando SSL
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-client
            port:
              number: 8080
