Proyecto2/grpc/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /insert
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grpc-client
        pathType: Prefix
        backend:
          service:
            name: grpc-client
            port:
              number: 8080
